# Nexus-Wifi-Radar-V2

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  REPO_READY.md  SETUP.md  gui_scanner.py  install.bat  install.sh  pyproject.toml  run_launcher.bat  run_scanner.bat  setup_git.bat  test_cleanup.bat  uninstall.bat  uninstall.sh  validate_repo.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: ARCHITECTURE.md  ENHANCED_ACTIVE_SCAN.md  FEATURES.md
nexus/: __init__.py  __main__.py  app.py  launcher.py  server.py
nexus/audio/: __init__.py  sonar.py
nexus/core/: __init__.py  config.py  distance.py  easm_manager.py  fingerprint.py  hidden_classifier.py  intelligence.py  logging.py  models.py  oui_vendor.py  radar_modes.py  scan.py  signal.py  stability.py  validation.py  vendor.py  world_model.py
nexus/platform/: __init__.py  generic_linux.py  raspberry_pi.py  windows.py
nexus/security/: __init__.py  detection.py  report.py  rules.py  spoof.py
nexus/ui/: __init__.py  cli.py  heatmap.py  intel_dashboard.py  radar.py
nexus/ui/skins/: __init__.py  pipboy.py
tests/: __init__.py  boot_test.py  test_easm.py  test_easm_send.py  test_features.py  test_hidden_classifier.py  test_logging.py  test_oui_vendor.py  test_pipboy_skin.py  test_radar_modes.py  test_server_security.py  test_signal.py  test_smoke.py  test_validation.py  test_world_model.py
